--- a/style/partials/_typography.scss
+++ b/style/partials/_typography.scss
@@ -4,3 +4,17 @@
   font-style: normal;
   font-weight: 400;
 }
+
+@font-face {
+  font-family: Star-Wars-Outline;
+  src: url(../../assets/font/StarJediOutline-y0xm.ttf) format ("ttf");
+  font-style: normal;
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: Star-Wars-Droid;
+  src: url(../../assets/font/DroidobeshDepot-gxmVE.otf) format ("otf");
+  font-style: normal;
+  font-weight: 400;
+}
