--- a/style/partials/_main.scss
+++ b/style/partials/_main.scss
@@ -1,7 +1,11 @@
-@use "./variables" as *;
+@use './variables' as *;
+@use './card';
 
 .main-container {
   background-image: url(../../assets/images/space-background.jpeg);
   background-position: center;
   background-size: cover;
+  display: flex;
+  justify-content: center;
+  padding: 0 1rem;
 }
