--- a/style/partials/_card.scss
+++ b/style/partials/_card.scss
@@ -1,5 +1,21 @@
-@use './variables' as *;
+@use "./variables" as *;
 
 .card {
   color: $primary-font-color;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  background-color: rgba(255, 255, 255, 0.3);
+  padding: 1rem;
+  margin: 1rem;
+  border-radius: 5px;
+  &__logo-name {
+    text-align: center;
+  }
+  &__logo-image {
+    width: 5rem;
+  }
+  &__subcontainer {
+    display: flex;
+  }
 }
