--- a/style/partials/_main.scss
+++ b/style/partials/_main.scss
@@ -1,11 +1,16 @@
-@use './variables' as *;
-@use './card';
+@use "./variables" as *;
+@use "./card";
 
-.main-container {
-  background-image: url(../../assets/images/space-background.jpeg);
-  background-position: center;
-  background-size: cover;
-  display: flex;
-  justify-content: center;
-  padding: 0 1rem;
+.main {
+  &__container {
+    background-image: url(../../assets/images/space-background.jpeg);
+    background-position: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 1rem;
+  }
+  &__text {
+    color: $primary-font-color;
+  }
 }
