--- a/style/partials/_typography.scss
+++ b/style/partials/_typography.scss
@@ -18,3 +18,10 @@
   font-style: normal;
   font-weight: 400;
 }
+
+@font-face {
+  font-family: SF-distant-Outline;
+  src: url(../../assets/font/SF\ Distant\ Galaxy\ Outline.ttf), format ("ttf");
+  font-style: normal;
+  font-weight: 400;
+}
