--- a/style/main.css
+++ b/style/main.css
@@ -56,7 +56,8 @@ body {
 }
 .nav__list-item {
   color: #ffe81f;
-  text-decoration: 0;
+  -webkit-text-decoration: 0;
+          text-decoration: 0;
 }
 
 .card {
@@ -69,7 +70,19 @@ body {
   margin: 1rem;
   border-radius: 7px;
 }
-.card__logo-name {
+@media (min-width: 768px) {
+  .card__subcontainer {
+    display: flex;
+    flex-direction: column;
+  }
+}
+@media (min-width: 768px) {
+  .card__logo {
+    display: flex;
+    justify-content: center;
+  }
+}
+.card__name {
   text-align: center;
   font-family: SF-distant-Outline;
   font-size: 1.2rem;
@@ -84,6 +97,13 @@ body {
 .card__description {
   padding: 0.5rem;
   letter-spacing: 1.5px;
+}
+@media (min-width: 768px) {
+  .card__container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 }
 
 .main__container {
