--- a/style/partials/_main.scss
+++ b/style/partials/_main.scss
@@ -1,5 +1,6 @@
-@use "./variables" as *;
-@use "./card";
+@use './variables' as *;
+@use './mixins' as *;
+@use './card';
 
 .main {
   &__container {
