--- a/style/main.css
+++ b/style/main.css
@@ -36,6 +36,9 @@ body {
 }
 .header {
   background-color: #000000;
+  position: sticky;
+  top: 0;
+  z-index: 1;
 }
 .header__title {
   color: #ffe81f;
