--- a/style/partials/_header.scss
+++ b/style/partials/_header.scss
@@ -4,6 +4,9 @@
 
 .header {
   background-color: $primary-background-color;
+  position: sticky;
+  top: 0;
+  z-index: 1;
 
   &__title {
     color: $primary-font-color;
